# Agent-Lighthouse

./: .env.example  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  docker-compose.yml  package-lock.json  render.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  publish-sdk.yml  release.yml
backend/: .env.example  Dockerfile  config.py  database.py  dependencies.py  main.py  rate_limit.py  requirements-dev.txt  requirements.txt  security.py
backend/integration_tests/: test_redis_integration.py
backend/models/: __init__.py  agent.py  metrics.py  state.py  trace.py
backend/routers/: __init__.py  agents.py  api_keys.py  auth.py  state.py  traces.py  websocket.py
backend/services/: __init__.py  api_key_service.py  connection_manager.py  redis_service.py  user_service.py
backend/tests/: conftest.py  test_auth_contract.py  test_state_api.py  test_traces_api.py
docs/: ARCHITECTURE.md  OPERATIONS.md  TROUBLESHOOTING.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
frontend/e2e/: dashboard.spec.js
frontend/src/: App.css  App.jsx  config.js  index.css
frontend/src/auth/: session.js  supabaseClient.js
frontend/src/components/: ApiKeyModal.jsx  AuthModal.jsx  DocsPage.css  DocsPage.jsx  LandingPage.css  LandingPage.jsx  OnboardingPanel.css  OnboardingPanel.jsx  ToastContainer.css  ToastContainer.jsx
frontend/src/components/Sidebar/: Sidebar.css  Sidebar.jsx  Sidebar.test.jsx
frontend/src/components/StateInspector/: StateInspector.css  StateInspector.jsx  index.js
frontend/src/components/Timeline/: Timeline.css  Timeline.jsx
frontend/src/components/TokenMonitor/: TokenMonitor.css  TokenMonitor.jsx  index.js
frontend/src/components/TraceGraph/: AgentNode.jsx  LLMNode.jsx  ToolNode.jsx  TraceGraph.css  TraceGraph.jsx  index.js
frontend/src/hooks/: index.js  useAgentState.js  useToast.js  useTraces.js  useWebSocket.js
sdk/: .gitignore  README.md  pyproject.toml
sdk/agent_lighthouse/: __init__.py  auto.py  cli.py  client.py  pricing.py  serialization.py  tracer.py
sdk/agent_lighthouse.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sdk/agent_lighthouse/adapters/: __init__.py  autogen.py  crewai.py  langchain.py
sdk/examples/: demo_multi_agent.py  smoke_trace_check.py
sdk/tests/: test_auto_instrumentation.py  test_tracer_context.py
(+1 files in other folders)
