[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lighthouse"
version = "0.1.0"
description = "Multi-Agent Observability SDK for Agent Lighthouse"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Agent Lighthouse", email = "lighthouse@example.com"}
]
keywords = ["agents", "multi-agent", "observability", "tracing", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "websockets>=12.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.1.0"]
langgraph = ["langgraph>=0.0.1"]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/example/agent-lighthouse"
Documentation = "https://agent-lighthouse.dev"
Repository = "https://github.com/example/agent-lighthouse"
