[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-lighthouse"
version = "0.3.0"
description = "Multi-Agent Observability SDK for Agent Lighthouse"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Agent Lighthouse Contributors", email = "maintainers@agent-lighthouse.dev"}
]
keywords = ["agents", "multi-agent", "observability", "tracing", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.1.0"]
langgraph = ["langgraph>=0.0.1"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "bandit>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/noogler-aditya/Agent-Lighthouse"
Documentation = "https://github.com/noogler-aditya/Agent-Lighthouse#readme"
Repository = "https://github.com/noogler-aditya/Agent-Lighthouse"
